# MMKV

Android/MMKV/mmkv/: CMakeLists.txt
Android/MMKV/mmkv/src/main/cpp/: CodedInputData.cpp  CodedOutputData.cpp  MMBuffer.h  MMKV.cpp  MMKV.h  MMKVLog.cpp  MMKVLog.h  MmapedFile.h  native-bridge.cpp
Android/MMKV/mmkv/src/main/cpp/aes/: AESCrypt.h
